--- a/Led_HAL/Led_HAL.ioc
+++ b/Led_HAL/Led_HAL.ioc
@@ -13,8 +13,9 @@ Mcu.Name=STM32F401V(D-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin2=PD13
-Mcu.PinsNb=3
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PD13
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401VETx
@@ -31,6 +32,13 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0-WKUP.GPIO_Label=button
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Input
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=led
 PD13.Locked=true
 PD13.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
@@ -58,14 +66,14 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=LedBlink_Lib.ioc
-ProjectManager.ProjectName=LedBlink_Lib
+ProjectManager.ProjectFileName=Led_HAL.ioc
+ProjectManager.ProjectName=Led_HAL
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
