--- a/Led_HAL/Led_HAL.ioc
+++ b/Led_HAL/Led_HAL.ioc
@@ -8,14 +8,16 @@ Mcu.CPN=STM32F401VET6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP2=TIM1
+Mcu.IPNb=3
 Mcu.Name=STM32F401V(D-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PD13
-Mcu.PinsNb=4
+Mcu.Pin4=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401VETx
@@ -93,5 +95,9 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+TIM1.IPParameters=Prescaler
+TIM1.Prescaler=15999
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
 isbadioc=false
