ADC_HAL - ver 2.1: modify code

--- a/ADC_HAL/ADC_HAL.ioc
+++ b/ADC_HAL/ADC_HAL.ioc
@@ -22,12 +22,13 @@ Mcu.IPNb=5
 Mcu.Name=STM32F401V(D-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA7
-Mcu.Pin1=PA9
-Mcu.Pin2=PA10
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin1=PD13
+Mcu.Pin2=PA9
+Mcu.Pin3=PA10
+Mcu.Pin4=PA13
+Mcu.Pin5=PA14
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401VETx
@@ -55,6 +56,8 @@ PA7.Locked=true
 PA7.Signal=ADCx_IN7
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PD13.Locked=true
+PD13.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
